[package]
name = "adventofcode2015"
version = "0.1.0"
edition = "2021"

[dependencies]
md5 = "0.7.0"
regex = "1.7.0"

[lib]
name="common"
path="lib.rs"

[[bin]]
name="day01"
path="day01.rs"

[[bin]]
name="day02"
path="day02.rs"

[[bin]]
name="day03"
path="day03.rs"

[[bin]]
name="day04"
path="day04.rs"

[[bin]]
name="day05"
path="day05.rs"

[[bin]]
name="day06"
path="day06.rs"

[[bin]]
name="day07"
path="day07.rs"

[[bin]]
name="day08"
path="day08.rs"

[[bin]]
name="day09"
path="day09.rs"

[[bin]]
name="day10"
path="day10.rs"

[[bin]]
name="day11"
path="day11.rs"
